@@ -4,7 +4,6 @@ package com.codecool.imdb.controller;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import javax.validation.Valid;
 
@@ -13,12 +12,20 @@ import com.codecool.imdb.data.repositories.UserRepository;
 import com.codecool.imdb.domain.entities.AppUser;
 import com.codecool.imdb.domain.entities.ERole;
 import com.codecool.imdb.domain.entities.Role;
+import com.codecool.imdb.domain.entities.RefreshToken;
+import com.codecool.imdb.utils.exception.TokenRefreshException;
 import com.codecool.imdb.payload.request.LoginRequest;
 import com.codecool.imdb.payload.request.SignupRequest;
+import com.codecool.imdb.payload.request.TokenRefreshRequest;
 import com.codecool.imdb.payload.response.JwtResponse;
 import com.codecool.imdb.payload.response.MessageResponse;
+import com.codecool.imdb.payload.response.TokenRefreshResponse;
 import com.codecool.imdb.security.JwtUtils;
+import com.codecool.imdb.security.service.RefreshTokenService;
 import com.codecool.imdb.security.service.UserDetailsImpl;
+import com.codecool.imdb.utils.validation.EmailValidator;
+import com.codecool.imdb.utils.validation.PasswordValidator;
+import com.codecool.imdb.utils.validation.UsernameValidator;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.authentication.AuthenticationManager;
@@ -43,24 +50,33 @@ public class AuthController {
     UserRepository userRepository;
     RoleRepository roleRepository;
     PasswordEncoder encoder;
+
     JwtUtils jwtUtils;
+
+    RefreshTokenService refreshTokenService;
 
     @Autowired
     public AuthController(AuthenticationManager authenticationManager,
                           UserRepository userRepository,
                           RoleRepository roleRepository,
                           PasswordEncoder encoder,
-                          JwtUtils jwtUtils) {
+                          JwtUtils jwtUtils,
+                          RefreshTokenService refreshTokenService) {
         this.authenticationManager = authenticationManager;
         this.userRepository = userRepository;
         this.roleRepository = roleRepository;
         this.encoder = encoder;
         this.jwtUtils = jwtUtils;
+        this.refreshTokenService = refreshTokenService;
     }
 
     @PostMapping("/login")
     public ResponseEntity<?> authenticateUser(@Valid @RequestBody LoginRequest loginRequest) {
-
+        if (!userRepository.existsByUsername(loginRequest.getUsername()) || !encoder.matches(loginRequest.getPassword(),  userRepository.findByUsername(loginRequest.getUsername()).get().getPassword()) ) {
+            return ResponseEntity
+                    .badRequest()
+                    .body(new MessageResponse("Error: invalid username or password!"));
+        }
         Authentication authentication = authenticationManager.authenticate(
                 new UsernamePasswordAuthenticationToken(loginRequest.getUsername(), loginRequest.getPassword()));
 
@@ -69,14 +85,15 @@ public class AuthController {
 
         UserDetailsImpl userDetails = (UserDetailsImpl) authentication.getPrincipal();
         List<String> roles = userDetails.getAuthorities().stream()
-                .map(GrantedAuthority::getAuthority)
-                .collect(Collectors.toList());
+                .map(GrantedAuthority::getAuthority).toList();
+        RefreshToken refreshToken = refreshTokenService.createRefreshToken(userDetails.getId());
 
-        return ResponseEntity.ok(new JwtResponse(jwt,
-                userDetails.getId(),
-                userDetails.getUsername(),
-                userDetails.getEmail(),
-                roles));
+        return ResponseEntity.ok(JwtResponse.builder()
+                .token(jwt).refreshToken(refreshToken.getToken()).id(userDetails.getId())
+                .username(userDetails.getUsername())
+                .email(userDetails.getEmail()).roles(roles).type("Bearer")
+                .build());
+
     }
 
     @PostMapping("/signup")
@@ -93,6 +110,32 @@ public class AuthController {
                     .body(new MessageResponse("Error: Email is already in use!"));
         }
 
+        if (!UsernameValidator.isValid(signUpRequest.getUsername())){
+            return ResponseEntity
+                    .badRequest()
+                    .body(new MessageResponse("Error invalid username:" +
+                            " 3 to 20 characters." +
+                            "First and last characters must be letter or number." +
+                            "Lowercase and uppercase letters, numbers, underscores, hyphens and dots allowed."));
+        }
+        if (!PasswordValidator.isValid(signUpRequest.getPassword())){
+            return ResponseEntity
+                    .badRequest()
+                    .body(new MessageResponse("Error invalid password:" +
+                            "6 to 40 characters." +
+                            "Password must contain at least one uppercase letter," +
+                            "one lowercase letter, one digit and one special character."));
+        }
+        if (!EmailValidator.isValid(signUpRequest.getEmail())){
+            return ResponseEntity
+                    .badRequest()
+                    .body(new MessageResponse("Error invalid email:" +
+                            "Must be a valid email format: include an individual part," +
+                            "the at-sign and a domain name part."));
+        }
+
+        System.out.println("hello");
+
         // Create new user's account
         AppUser user = AppUser.builder()
                 .email(signUpRequest.getEmail())
@@ -100,7 +143,7 @@ public class AuthController {
                 .firstName(signUpRequest.getFirstName())
                 .lastName(signUpRequest.getLastName())
                 .password(encoder.encode(signUpRequest.getPassword()))
-                .build() ;
+                .build();
 //
 
         Set<String> strRoles = signUpRequest.getRole();
@@ -136,5 +179,19 @@ public class AuthController {
         userRepository.save(user);
 
         return ResponseEntity.ok(new MessageResponse("User registered successfully!"));
+    }
+
+    @PostMapping("/refreshtoken")
+    public ResponseEntity<?> refreshToken(@Valid @RequestBody TokenRefreshRequest request){
+        String requestRefreshToken = request.getRefreshToken();
+
+        return  refreshTokenService.findByToken(requestRefreshToken)
+                .map(refreshTokenService::verifyExpiration)
+                .map(RefreshToken::getAppUser)
+                .map(appUser -> {
+                    String token = jwtUtils.generateTokenFromUsername(appUser.getUsername());
+                    return ResponseEntity.ok(TokenRefreshResponse.builder().accessToken(token).refreshToken(requestRefreshToken).tokenType("Bearer").build());
+                })
+                .orElseThrow(() -> new TokenRefreshException(requestRefreshToken,"Refresh token is not in database!"));
     }
 }
